Fix misaligned blocks after update without refreshing

--- a/assets/less/modules/account.less
+++ b/assets/less/modules/account.less
@@ -412,6 +412,7 @@ input[type=text] + .password__toggle svg {
     @media @screen-sm-max {
         margin: 2rem 0;
     }
+    .account__cards { margin: 0; }
 }
     .account__cards .card {
         border-bottom: 0.2rem solid @color-primary;
